Fix cursor jumping

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,8 @@ code {
 }
 
 .textArea {
+  width: 100%;
+  font-size: 18px;
   padding: 10px;
   color: #5f5f5f;
   border: 1px solid gray;
